packages/astro/test/fixtures/errors/src/pages/vue-runtime-error.astro
---
import VueRuntimeError from '../components/VueRuntimeError.vue';
---

<div>
  <VueRuntimeError />
</div>
